# mlops-course-code-students

./: .gitignore  README.md  pyproject.toml
entregable/: requirements.txt  vertexai-pipelines.ipynb
llmops/deepeval/: llm-as-judge.ipynb
llmops/langfuse/: running-langfuse.sh
llmops/running_llms/: requirements.txt  working_with_phi3.ipynb
model-registry/: mlflow-basics.ipynb  mlflow-training.ipynb  requeriments.txt
model-servers/: requirements.txt
model-servers/fast-api-server/app/: app.py
model-servers/fast-api-tutorial/app/: app.py
model-servers/fast-api-vertex/: push-docker-gcp.sh
model-servers/fast-api-vertex-SOLUTION/: deploy_vertex.py  push-docker-gcp.sh
model-servers/fast-api-vertex-SOLUTION/app/: app.py
model-servers/fast-api-vertex-cloud-build/: cloudbuild-cd.yaml  cloudbuild-ci.yaml  docker-instructions.sh  setup-cloud-build.sh
model-servers/fast-api-vertex-cloud-build-SOLUTION/: Dockerfile  cloudbuild-cd.yaml  cloudbuild-ci.yaml  requirements.txt  setup-cloud-build.sh
model-servers/fast-api-vertex-cloud-build-SOLUTION/app/: app.py
model-servers/fast-api-vertex-cloud-build/app/: app.py
model-servers/fast-api-vertex/app/: app.py
model-servers/mlserver/00-basic/: sklearn-basic-example.ipynb
model-servers/mlserver/01-custom/: custom-example.ipynb  model-settings.json
pipelines/: kubeflow_exercise.ipynb  kubeflow_tutorial.ipynb  metaflow-basics.ipynb  metaflow-model-training.ipynb  metaflow_trainingflow.py  requirements.txt  vertexai_pipelines_tutorial.ipynb
(+4 files in other folders)
