[project]
name = "mlops-course-code"
version = "0.1.0"
description = "MLOps course: model servers, model registry, pipelines, and Vertex AI"
requires-python = "==3.12.*"
dependencies = [
    "pandas==2.2.3",
    "numpy>=1.26.4",
    "scikit-learn==1.6.1",
    "ipykernel",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.4",
]

[project.optional-dependencies]
model-servers = [
    "mlserver==1.7.1",
    "mlserver-sklearn==1.7.1",
    "fastapi>=0.115",
    "requests==2.32.3",
]
model-registry = [
    "mlflow==3.10.1",
    "optuna==4.2.0",
    "matplotlib==3.10.1",
]
pipelines = [
    "metaflow==2.13.9",
    "optuna==4.2.0",
    "matplotlib==3.10.1",
]
vertex = [
    "google-cloud-storage==2.19.0",
    "kfp==2.16.0",
]
all = [
    "mlops-course-code[model-servers,model-registry,pipelines]",
]
